--- a/package.json
+++ b/package.json
@@ -9,8 +9,16 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack",
-    "start": "webpack && nodemon server.js"
+    "build": "webpack --mode production",
+    "build:dev": "webpack",
+    "start": "webpack --mode production && node server.js",
+    "start:dev": "webpack && nodemon",
+    "lint": "eslint **/*.js",
+    "lint:fix": "eslint **/*.js --fix",
+    "lint:src": "eslint ./src/**/*.js",
+    "lint:src:fix": "eslint ./src/**/*.js --fix",
+    "prettier": "prettier src/**/*.js",
+    "prettier:fix": "prettier --write src/**/*.js"
   },
   "author": "Lawrence Good",
   "license": "ISC",
@@ -22,15 +30,20 @@
     "cors": "^2.8.5",
     "css-loader": "^6.5.1",
     "csurf": "^1.11.0",
-    "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
     "morgan": "^1.10.0",
     "style-loader": "^3.3.1"
   },
   "devDependencies": {
+    "@types/node": "^17.0.2",
     "debug": "^4.3.3",
+    "dotenv": "^10.0.0",
     "eslint": "^8.5.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.3",
+    "html-webpack-plugin": "^5.5.0",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1"
   }
